[package]
name = "test-solana-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.1", features = ["full"] }

solana-sdk = "1.14.18"
solana-client = "1.14.18"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
rand = "0.8.5"
rand_chacha = "0.3.1"
